# bachelor-thesis-playground

./: .gitignore  CMakeLists.txt  Main.cpp  Notes.md  OldMain.cpp  README.md  Summary.cpp  Validate.cpp  algorithmgen.sh  br.sh  build.sh  classgen.sh  cmakegen.sh  example.sh  join.sh  load.sh  main.cpp  run.sh  save.sh  summary.sh  test.sh  validate.sh
Algorithms/: MultiPackage.cpp  MultiPackage.h  ScheduleOneRun.cpp  ScheduleOneRun.h  Scheduler.cpp  Scheduler.h  SimpleGreedy.cpp  SimpleGreedy.h
Classes/: DataStorage.cpp  DataStorage.h  DataTransmissionCalculator.cpp  DataTransmissionCalculator.h  FrameSorter.cpp  FrameSorter.h  InputReader.cpp  InputReader.h  InputStorage.cpp  InputStorage.h  OutputReader.h  OutputStorage.cpp  OutputStorage.h  Precalculator.cpp  Precalculator.h  Printer.cpp  Printer.h  Scheduler.cpp  Scheduler.h  SolutionManager.cpp  SolutionStore.h  Summarizer.cpp  Summarizer.h  Transformer.h  Utils.cpp  Validator.cpp  Validator.h
Data Analysis/: notebook.ipynb
Experiments/exp1_one_cell_per_user_at_any_time_and_sorting_by_density/: Description.json  Main.cpp  codeforcesResult.csv
Experiments/exp1_one_radio_per_user_at_any_time_and_sorting_by_density/: Description.json  Joined.cpp
Helpers/: joiner.py
Notes/: Codeforces Comments.md  Formulas.md  Generic Algorithm.md  Main.md  Multiple Iteration - sort frames by power consumption.md  Multiple Package on same RBG-Cell.md  Multiple iteration - Multiple frames per (RBG, Cell) - Sort by power.md  Multiple iteration - single frame.md
Notes/.obsidian/: appearance.json  graph.json  workspace.json
(+44 files in other folders)
